fix: type and version

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sanity/image-url": "^1.1.0",
     "@sanity/incompatible-plugin": "^1.0.5",
-    "@sanity/ui": "^2.15.18",
+    "@sanity/ui": "^2.15.8",
     "@udecode/cn": "^46.0.9",
     "@udecode/plate": "^46.0.10",
     "@udecode/plate-alignment": "^44.0.0",
@@ -76,6 +76,7 @@
     "@udecode/plate-selection": "^46.0.4",
     "@udecode/plate-table": "^45.0.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
